@@ -86,6 +86,7 @@
       - Added 'timeout' and 'timeoutlen' options. [b6]
       - Added n_{, n_}, n_[ and n_] mappings. [b7]
       - Added n_g], n_[d and n_]d. [b8]
+      - Added <C-t> to open the next mapping in a new tab. [b8]
       - Added <A-b> to execute a builtin mapping. [b6]
       - Added <A-m>l and <A-m>s to aid in the construction of
         macros. [b6]
